; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_release.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.skynet_context* @skynet_context_release(%struct.skynet_context* %0) #0 {
  %2 = alloca %struct.skynet_context*, align 8
  %3 = alloca %struct.skynet_context*, align 8
  store %struct.skynet_context* %0, %struct.skynet_context** %3, align 8
  %4 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %5 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %4, i32 0, i32 0
  %6 = call i64 @ATOM_DEC(i32* %5)
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %10 = call i32 @delete_context(%struct.skynet_context* %9)
  store %struct.skynet_context* null, %struct.skynet_context** %2, align 8
  br label %13

11:                                               ; preds = %1
  %12 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  store %struct.skynet_context* %12, %struct.skynet_context** %2, align 8
  br label %13

13:                                               ; preds = %11, %8
  %14 = load %struct.skynet_context*, %struct.skynet_context** %2, align 8
  ret %struct.skynet_context* %14
}

declare dso_local i64 @ATOM_DEC(i32*) #1

declare dso_local i32 @delete_context(%struct.skynet_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
